[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "shodan"
dynamic = ["version"]
description = "Biblioteka i narzędzie wiersza poleceń do interfejsu Shodan"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "John Matherly", email = "jmath@shodan.io"}]
dependencies = [
    "click>=8.1.7",
    "click-plugins>=1.1.1",
    "colorama>=0.4.6",
    "requests>=2.31.0",
    "XlsxWriter>=3.1.9",
    "tldextract>=5.1.2",
    "httpx",
    "uvloop; platform_system != 'Windows'",
]

[project.scripts]
shodan = "shodan.__main__:main"

[tool.setuptools_scm]
fallback_version = "0.0.0"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
include = ["shodan", "shodan.*"]
